# hledger-desktop

./: .gitignore  Cargo.toml  LICENSE  README.md  Tauri.toml  build.rs  package.json  pnpm-lock.yaml  svelte.config.js  tauri.conf.json
.github/workflows/: ci.yaml  rust-clippy.yml  rust.yml
binaries/: .gitignore
crates/hledger-desktop/: Cargo.toml
crates/hledger-desktop-ui/: Cargo.toml
crates/hledger-desktop-ui/src/: action.rs  app.rs  command.rs  journal.rs  lib.rs  main.rs  persistance.rs  widgets.rs  window_info.rs
crates/hledger-desktop-ui/src/app/: window.rs
crates/hledger-desktop-ui/src/app/window/: bottom_bar.rs  file.rs  tab.rs  top_bar.rs
crates/hledger-desktop/src/: app.rs  converter.rs  frames.rs  glob.rs  journal.rs  lib.rs  main.rs  persistance.rs  promise.rs  render_mode.rs  theme.rs  watcher.rs
crates/hledger-desktop/src/app/: file.rs  watcher.rs  window.rs
crates/hledger-desktop/src/app/file/: register.rs
crates/hledger-desktop/src/app/window/: file.rs  top_bar.rs
crates/hledger-desktop/src/frame/actions/: new_transaction.rs  tab.rs
crates/hledger-desktop/src/frame/state/: tab.rs
crates/hledger-desktop/src/hledger/: exec.rs  manager.rs  types.rs
crates/hledger-desktop/src/widgets/: spinner.rs
crates/hledger-journal/: Cargo.toml
crates/hledger-journal/src/: glob.rs  lib.rs
crates/hledger-parser/: Cargo.toml  README.md
crates/hledger-parser/examples/: cheatsheet.rs
crates/hledger-parser/examples/fixture/: cheatsheet.journal
crates/hledger-parser/src/: component.rs  directive.rs  lib.rs  state.rs  utils.rs
crates/hledger-parser/src/component/: account_name.rs  amount.rs  comment.rs  commodity.rs  date.rs  period.rs  price.rs  quantity.rs  query.rs  status.rs  time.rs  whitespace.rs
crates/hledger-parser/src/component/date/: simple.rs  smart.rs
crates/hledger-parser/src/component/period/: interval.rs
crates/hledger-parser/src/component/query/: condition.rs
crates/hledger-parser/src/directive/: account.rs  auto_postings.rs  commodity.rs  decimal_mark.rs  include.rs  payee.rs  price.rs  tag.rs  transaction.rs  year.rs
crates/hledger-parser/src/directive/auto_postings/: query.rs
crates/hledger-parser/src/directive/include/: format.rs
crates/hledger-parser/src/directive/transaction/: header.rs  periodic.rs  posting.rs  simple.rs  status.rs
crates/hledger-parser/src/directive/transaction/posting/: assertion.rs
crates/hledger-query/: Cargo.toml
crates/hledger-query/src/: lib.rs
crates/iced-virtual-list/: Cargo.toml  README.rs
crates/iced-virtual-list/src/: lib.rs
icons/: icon.icns
src/: app.html  app.rs  converter.rs  hledger.rs  main.rs  promise.rs  ui.rs  widgets.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: .gitignore  download.sh
src-tauri/src/: main.rs
src-tauri/src/hledger/: mod.rs  utils.rs
src-tauri/src/hledger/account/: parsers.rs  tests.rs  types.rs
src-tauri/src/hledger/amount/: parsers.rs  tests.rs  types.rs
src-tauri/src/hledger/code/: parsers.rs
src-tauri/src/hledger/comment/: parsers.rs  tests.rs
src-tauri/src/hledger/commodity/: parsers.rs  tests.rs  types.rs
src-tauri/src/hledger/date/: parsers.rs  tests.rs
src-tauri/src/hledger/description/: parsers.rs  types.rs
src-tauri/src/hledger/include/: parsers.rs  tests.rs  types.rs
src-tauri/src/hledger/journal/: parsers.rs  tests.rs  types.rs
src-tauri/src/hledger/posting/: parsers.rs  tests.rs  types.rs
src-tauri/src/hledger/price/: parsers.rs  tests.rs  types.rs
src-tauri/src/hledger/status/: parsers.rs  tests.rs  types.rs
src-tauri/src/hledger/tag/: parsers.rs  types.rs
src-tauri/src/hledger/transaction/: parsers.rs  tests.rs  types.rs
src/app/: mod.rs  state.rs  ui.rs
src/app/tab/: converter.rs  mod.rs  state.rs  ui.rs
src/app/tab/accounts_tree/: mod.rs  state.rs  ui.rs
src/app/tab/new_transaction_modal/: mod.rs  ui.rs
src/app/tab/transactions_list/: mod.rs  ui.rs
src/frame/: actions.rs  mod.rs  ui.rs
src/frame/actions/: action.rs  app.rs  new_transaction.rs  tab.rs
src/frame/state/: app.rs  mod.rs  new_transaction.rs  tab.rs
src/hledger/: client.rs  exec.rs  manager.rs  mod.rs  process.rs  types.rs
src/lib/: context.ts  hledger.ts  index.ts  tauri.ts  types.test.ts  types.ts  utils.ts
src/lib/components/: AccountsTree.svelte  Amount.svelte  AutocompleteTextInput.svelte  FileSelector.svelte  PostingForm.svelte  Postings.svelte  TransactionForm.svelte  WithHledgerFile.svelte  index.ts
src/routes/: +layout.svelte  +page.svelte
src/state/: mod.rs  update.rs
src/state/tab/: converter.rs  mod.rs  new_transaction.rs
src/widgets/: checkbox.rs  dark_light_mode_switch.rs  fps.rs  mod.rs
