[package]
name = "hledger-desktop"
description = "Desktop GUI for the hledger accounting tool"
version = "0.0.1"
authors = [ "Nikita Galaiko <nikita@galaiko.rocks>" ]
edition = "2021"
repository = "https://github.com/ngalaiko/hledger-desktop"
license = "GPL-3.0-only"

[dependencies]
chrono = { version = "0.4.26", features = [ "serde" ] }
egui-modal = "0.2.4"
egui-phosphor = "0.2.0"
egui_autocomplete = "0.2.0"
egui_extras = { version = "0.22", features = [ "chrono" ] }
futures = "0.3.28"
lazy_static = "1.4.0"
poll-promise = { version = "0.3", features = [ "tokio" ] }
rand = "0.8.5"
regex = "1.9.1"
reqwest = "0.11.18"
rfd = "0.11.0"
rust_decimal = "1.32.0"
serde = "1.0"
serde_json = "1.0"
tauri = { version = "=2.0.0-alpha.10", features = [] }
tauri-egui = { git = "https://github.com/Shays-Forks/tauri-egui.git", branch = "0.22" }
tauri-plugin-shell = "2.0.0-alpha.0"
tauri-utils = { version = "=2.0.0-alpha.6" }
thiserror = "1.0"
tokio = { version = "1.29.1", features = [ "sync", "macros" ] }
tokio-util = "0.7.8"
tracing = "0.1"
tracing-appender = "0.2.2"
tracing-subscriber = "0.3"
url = "2.2"
which = "4.4.2"

[build-dependencies]
tauri-build = { version = "=2.0.0-alpha.6", features = [ "config-toml" ] }
which = "4.4.2"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
# strip = true      # Remove debug symbols
