[workspace]
members = [
    "crates/hledger-desktop",
    "crates/hledger-journal",
    "crates/hledger-parser",
]
resolver = "2"

[workspace.dependencies]
hledger-journal = { path = "crates/hledger-journal" }
hledger-parser = { path = "crates/hledger-parser" }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "deny"
perf = "deny"
correctness = "deny"
complexity = "deny"
style = "deny"
pedantic = "deny"

[profile.release]
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
strip = true      # Remove debug symbols
