[package]
name = "hledger-desktop"
description = "Desktop GUI for the hledger accounting tool"
version = "1.0.0-beta.1"
authors = ["Nikita Galaiko <nikita@galaiko.rocks>"]
edition = "2021"
repository = "https://github.com/ngalaiko/hledger-desktop"
license = "MIT"

[dependencies]
hledger-parser.workspace = true

iced = { version = "0.13", features = ["debug", "smol"] }
tracing = "0.1"
tracing-subscriber = "0.3"
async-fs = "2.1"
rayon = "1.10"
rfd = "0.15"
thiserror = "2.0"
async-walkdir = "2.0"
wax = "0.6"
notify = "7.0"
notify-debouncer-mini = "0.5"

[dev-dependencies]
macro_rules_attribute = "0.2"
tempfile = "3.14"
smol-macros = "0.1"

[lints]
workspace = true
