[package]
name = "hledger-desktop"
description = "Desktop GUI for the hledger accounting tool"
version = "1.0.0-beta.1"
authors = ["Nikita Galaiko <nikita@galaiko.rocks>"]
edition = "2021"
repository = "https://github.com/ngalaiko/hledger-desktop"
license = "MIT"

[dependencies]
hledger-journal.workspace = true
iced-virtual-list.workspace = true

iced = { version = "0.13", features = ["debug", "smol"] }
tracing = "0.1"
tracing-subscriber = "0.3"
rfd = "0.15"
thiserror = "2.0"
notify = "7.0"
notify-debouncer-mini = "0.5"

[lints]
workspace = true
