[package]
name = "hledger-desktop"
description = "Desktop app for the hledger accounting tool"
version = "0.0.1"
authors = ["Nikita Galaiko <nikita@galaiko.rocks>"]
edition = "2021"
repository = "https://github.com/ngalaiko/hledger-desktop"
license = "GPL-3.0-only"

[dependencies]
hledger-journal.workspace = true

eframe = { version = "0.30", features = ["persistence"] }
egui_extras = "0.30"
egui-phosphor = "0.8"
rfd = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
smol-macros = "0.1"
macro_rules_attribute = "0.2"
notify = "7.0"
notify-debouncer-mini = "0.5"
async-channel = "2.3"
async-lock = "3.4"
futures = "0.3"
async-task = "4.7"

[dev-dependencies]
tempfile = "3.14"

[lints]
workspace = true
